exports[`JWT Login component UI Component matches snapshot 1`] = `
<form
  id="caldera-pro-jwt-login"
  onSubmit={[Function]}>
  <div>
    <div
      className="alert">
      
    </div>
  </div>
  <div
    className="components-base-control">
    <div
      className="components-base-control__field">
      <label
        className="components-base-control__label"
        htmlFor="inspector-text-control-0">
        User name
      </label>
      <input
        aria-describedby={undefined}
        className="components-text-control__input"
        disabled={false}
        id="caldera-pro-cfp-username"
        onChange={[Function]}
        type="text"
        value="" />
    </div>
  </div>
  <div
    className="components-base-control">
    <div
      className="components-base-control__field">
      <label
        className="components-base-control__label"
        htmlFor="inspector-text-control-1">
        Password
      </label>
      <input
        aria-describedby={undefined}
        className="components-text-control__input"
        disabled={false}
        id="caldera-pro-cfp-password"
        onChange={[Function]}
        type="password"
        value="" />
    </div>
  </div>
  <input
    id="caldera-pro-jwt-login-submit"
    type="submit"
    value="Login" />
</form>
`;

exports[`JWT Login component UI Shows spinner when loading 1`] = `
<form
  id="caldera-pro-jwt-login"
  onSubmit={[Function]}>
  <div>
    <div>
      Loading...
      <span
        className="components-spinner" />
    </div>
  </div>
  <div
    className="components-base-control">
    <div
      className="components-base-control__field">
      <label
        className="components-base-control__label"
        htmlFor="inspector-text-control-2">
        User name
      </label>
      <input
        aria-describedby={undefined}
        className="components-text-control__input"
        disabled={true}
        id="caldera-pro-cfp-username"
        onChange={[Function]}
        type="text"
        value="" />
    </div>
  </div>
  <div
    className="components-base-control">
    <div
      className="components-base-control__field">
      <label
        className="components-base-control__label"
        htmlFor="inspector-text-control-3">
        Password
      </label>
      <input
        aria-describedby={undefined}
        className="components-text-control__input"
        disabled={true}
        id="caldera-pro-cfp-password"
        onChange={[Function]}
        type="password"
        value="" />
    </div>
  </div>
  <input
    id="caldera-pro-jwt-login-submit"
    type="submit"
    value="Login" />
</form>
`;
